good progress in fixing selection jump up thing

--- a/src/components/EventDisplay/eventDisplay.css
+++ b/src/components/EventDisplay/eventDisplay.css
@@ -6,18 +6,30 @@
     background-color: #e8e8e8;
     scrollbar-width: none;
     -ms-overflow-style: none;
+    position: relative;
 }
 
 .event-display-container::-webkit-scrollbar {
     display: none;
 }
 
-.event-year-header {
-    position: -webkit-sticky;
+.floating-header {
     position: sticky;
     top: 0;
-    z-index: 1;
+    left: 0;
+    right: 0;
+    z-index: 1000;
     background-color: #e8e8e8;
+    margin: 0;
+    padding: 10px 0 5px 0;
+    font-size: 1.1em;
+    color: #000;
+    font-weight: 600;
+    border-bottom: 1px solid black;
+    pointer-events: none;
+}
+
+.event-year-header {
     margin: 0;
     padding: 10px 0 5px 0;
     font-size: 1.1em;
